--- a/Assignment-4/404.html
+++ b/Assignment-4/404.html
@@ -1,17 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-        "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>Error response</title>
-</head>
-
-<body>
-    <h1>Error response</h1>
-    <p>Error code: 404</p>
-    <p>Message: File not found.</p>
-    <p>Error code explanation: HTTPStatus.NOT_FOUND - Nothing matches the given URI.</p>
-</body>
-
+  <head>
+    <title>404 Error - Page Not Found</title>
+  </head>
+  <body>
+    <h1>404 Error - Page Not Found</h1>
+    <p>Sorry, the page/file you requested was not found.</p>    
+  </body>
 </html>
